--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/auth": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
@@ -18,6 +19,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
