--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
     "@react-native-firebase/storage": "^14.9.4",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@types/styled-components-react-native": "^5.1.3",
